--- a/codecov.yml
+++ b/codecov.yml
@@ -1,9 +1,6 @@
 coverage:
   status:
-    patch:
-      default:
-        target: 70%
-        threshold: 5%
+    patch: off
     project:
       default:
         target: 70%
