--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,3 +38,17 @@ jobs:
           artifact_name: "chi-crud-gorm"
           github_token: ${{ secrets.GITHUB_TOKEN }}
           codecov_token: ${{ secrets.CODECOV_TOKEN }}
+
+  gin-minimum:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Run tests with coverage
+        uses: "./.github/actions/test"
+        with:
+          working_directory: "gin/minimum"
+          artifact_name: "gin-minimum"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          codecov_token: ${{ secrets.CODECOV_TOKEN }}
