fix(gin/minimum): Fix CORS allowed origin logic
Allowed origins from the domains predefined (and ignore protocol, port or subdomain)

--- a/gin/minimum/.env
+++ b/gin/minimum/.env
@@ -1,7 +1,8 @@
 GO_VERSION=1.21
 
 API_ENV=development
-API_HOST=localhost
 API_PORT=3333
+API_BASE_URL=http://localhost:3333
+API_ALLOWED_CORS_DOMAINS=my-domain1.com,my-domain2.com
 
 GIN_MODE=debug
