--- a/gin/crud-gorm/.env
+++ b/gin/crud-gorm/.env
@@ -1,8 +1,9 @@
 GO_VERSION=1.21
 
 API_ENV=development
-API_HOST=localhost
 API_PORT=3333
+API_BASE_URL=http://localhost:3333
+API_ALLOWED_CORS_DOMAINS=mydomain1.com,mydomain2.com
 
 GIN_MODE=debug
 
