fix(chi/crud-gorm): Fix CORS allowed origin logic
Allowed origins from the domains predefined (and ignore protocol, port or subdomain)

--- a/chi/crud-gorm/internal/config/testdata/good.yml
+++ b/chi/crud-gorm/internal/config/testdata/good.yml
@@ -3,8 +3,9 @@
 # See https://github.com/spf13/viper/issues/584 for more details.
 api:
   env:
-  host:
   port:
+  base_url:
+  allowed_cors_domains:
 postgres:
   host:
   port:
