--- a/gin/auth-jwt/.env
+++ b/gin/auth-jwt/.env
@@ -4,6 +4,7 @@ API_ENV=development
 API_PORT=3333
 API_BASE_URL=localhost:3333
 API_ALLOWED_CORS_DOMAINS=mydomain1.com,mydomain2.com
+API_JWT_SIGNING_KEY=test_jwt_key
 
 GIN_MODE=debug
 
