fix(all): Remove http:// from API_BASE_URL
SwaggerInfo.Host expects no schemes, otherwise it will result in http://http://localhost:3333

--- a/chi/crud-gorm/.env
+++ b/chi/crud-gorm/.env
@@ -2,7 +2,7 @@ GO_VERSION=1.21
 
 API_ENV=development
 API_PORT=3333
-API_BASE_URL=http://localhost:3333
+API_BASE_URL=localhost:3333
 API_ALLOWED_CORS_DOMAINS=mydomain1.com,mydomain2.com
 
 POSTGRES_VERSION=16.1
