--- a/gin/minimum/.env
+++ b/gin/minimum/.env
@@ -2,7 +2,7 @@ GO_VERSION=1.21
 
 API_ENV=development
 API_PORT=3333
-API_BASE_URL=http://localhost:3333
+API_BASE_URL=localhost:3333
 API_ALLOWED_CORS_DOMAINS=my-domain1.com,my-domain2.com
 
 GIN_MODE=debug
