--- a/chi/crud-gorm/cmd/app/config.yml
+++ b/chi/crud-gorm/cmd/app/config.yml
@@ -3,8 +3,9 @@
 # See https://github.com/spf13/viper/issues/584 for more details.
 api:
   env:
-  host:
   port:
+  base_url:
+  allowed_cors_domains:
 postgres:
   host:
   port:
