--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,20 +11,6 @@ on:
 
 jobs:
 
-  chi-minimum:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Run tests with coverage
-        uses: "./.github/actions/test"
-        with:
-          working_directory: "chi/minimum"
-          artifact_name: "chi-minimum"
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          codecov_token: ${{ secrets.CODECOV_TOKEN }}
-
   chi-crud-gorm:
     runs-on: ubuntu-latest
     steps:
@@ -39,7 +25,7 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           codecov_token: ${{ secrets.CODECOV_TOKEN }}
 
-  gin-minimum:
+  chi-minimum:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -48,8 +34,8 @@ jobs:
       - name: Run tests with coverage
         uses: "./.github/actions/test"
         with:
-          working_directory: "gin/minimum"
-          artifact_name: "gin-minimum"
+          working_directory: "chi/minimum"
+          artifact_name: "chi-minimum"
           github_token: ${{ secrets.GITHUB_TOKEN }}
           codecov_token: ${{ secrets.CODECOV_TOKEN }}
 
@@ -64,5 +50,33 @@ jobs:
         with:
           working_directory: "gin/crud-gorm"
           artifact_name: "gin-crud-gorm"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          codecov_token: ${{ secrets.CODECOV_TOKEN }}
+
+  gin-auth-jwt:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Run tests with coverage
+        uses: "./.github/actions/test"
+        with:
+          working_directory: "gin/auth-jwt"
+          artifact_name: "gin-auth-jwt"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          codecov_token: ${{ secrets.CODECOV_TOKEN }}
+
+  gin-minimum:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Run tests with coverage
+        uses: "./.github/actions/test"
+        with:
+          working_directory: "gin/minimum"
+          artifact_name: "gin-minimum"
           github_token: ${{ secrets.GITHUB_TOKEN }}
           codecov_token: ${{ secrets.CODECOV_TOKEN }}
